# bayesn

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  example_fits.ipynb  run_bayesn  setup.cfg  simulation_examples.ipynb
.ipynb_checkpoints/: example_fits-checkpoint.ipynb  late_time_model_comparison-checkpoint.ipynb  simulation_examples-checkpoint.ipynb
bayesn/: __init__.py  bayesn_io.py  bayesn_model.py  cint_test.py  pdf_utils.py  spline_utils.py  test_fit.py  zltn_utils.py
bayesn/bayesn-filters/: DOVEKIE_CHCOV_labels.txt  DOVEKIE_COV_V6.0.npz  DOVEKIE_COV_V9.0.npz  filters.yaml
bayesn/bayesn-filters/filters/CTIO/ANDICAM/: H_andi.txt  J_andi.txt
bayesn/bayesn-filters/filters/CfA3/: 4sh_B_modtran.dat+70  KC_B_modtran.dat+70
bayesn/bayesn-filters/filters/CfA4/: cfa4_B_p1_modtran.dat_weighted  cfa4_B_p2_modtran.dat_weighted+-20  cfa4_V_p1_modtran.dat_weighted  cfa4_V_p2_modtran.dat_weighted+20  cfa4_i_p1_modtran.dat_weighted  cfa4_i_p2_modtran.dat_weighted+20  cfa4_r_p1_modtran.dat_weighted  cfa4_r_p2_modtran.dat_weighted+20
bayesn/bayesn-filters/filters/DECam/: decam_g.txt  decam_i.txt  decam_r.txt  decam_u.txt  decam_y.txt  decam_z.txt
bayesn/bayesn-filters/filters/LCO/Swope/: B_tel_ccd_atm_ext_1.2.dat+50  README  V_LC9844_tel_ccd_atm_ext_1.2.dat+-50
bayesn/bayesn-filters/filters/PS1/: g_filt_tonry.txt  open_filt_tonry.txt  w_filt_tonry.txt
bayesn/bayesn-filters/filters/Palomar/P48/CFH12K/: filters.dat~
bayesn/bayesn-filters/filters/Palomar/P60/GRBCam/: filters.dat~
bayesn/bayesn-filters/filters/Paranal/HAWKI/: Paranal_HAWKI.H.dat.txt  Paranal_HAWKI.J.dat.txt
bayesn/bayesn-filters/filters/Paranal/ISAAC/: fix_Jband.py
bayesn/bayesn-filters/filters/Paranal/VISTA/: #filters.dat#
bayesn/bayesn-filters/filters/SDSS/: g.dat+15
bayesn/bayesn-filters/filters/SNLS/: effMEGACAM-g.dat+30  effMEGACAM-i.dat+30  effMEGACAM-r.dat+30  effMEGACAM-z.dat+30
bayesn/bayesn-filters/filters/ZTF/: p48g.txt  p48i.txt  p48r.txt
bayesn/data/: hsiao.h5
bayesn/data/example_lcs/: Foundation_DR1_2016W.txt
bayesn/model_files/: README.md
bayesn/model_files/85_model_test/: BAYESN.YAML
bayesn/model_files/G25_85day_model/: BAYESN.YAML
bayesn/model_files/M20_NIRonly_model/: BAYESN.YAML
bayesn/model_files/M20_model/: BAYESN.INFO  BAYESN.YAML
bayesn/model_files/T21_model/: BAYESN.INFO  BAYESN.YAML
bayesn/model_files/W22_model/: BAYESN.INFO  BAYESN.YAML
bayesn/model_files/pop_RV_model/: BAYESN.YAML
bayesn/model_files/pop_RV_trunc/: BAYESN.YAML
bayesn/redlaws/: README
bayesn/redlaws/C00/: BAYESN.YAML  make_yaml.py  old.YAML
bayesn/redlaws/C94/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/CCM89/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/D22/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F04/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F19/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F99/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F99_AVGLMC/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F99_LMC2/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/F99_SNANA/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/FM07/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/G23/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/GCC09/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/O94/: BAYESN.YAML  make_yaml.py
bayesn/redlaws/VCG04/: BAYESN.YAML  make_yaml.py
docs/: builtin.rst  conf.py  filters.rst  fitting.rst  index.rst  installation.rst  intro.rst  modules.rst  output.rst  plotting.rst  requirements.txt  running.rst
docs/source/: bayesn.rst  conf.py  filters.rst  index.rst  intro.rst  output.rst  plotting.rst  running.rst
