[metadata]
name = bayesn
version = 0.4.0
author = Matt Grayling, Stephen Thorp, Kaisey Mandel
author_email = mg2102@cam.ac.uk
description = Hierarchical Bayesian modelling of type Ia SNe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bayesn/bayesn

[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    matplotlib
    h5py
    sncosmo
    arviz
    astropy
    extinction
    jax
    numpyro
    scipy
    ruamel.yaml
    tqdm
scripts =
    run_bayesn
include_package_data = True

[options.package_data]
bayesn: bayesn/data/*
        bayesn/data/example_lcs/*
        bayesn/bayesn-filters/*
        bayesn/bayesn-filters/filters/*
        bayesn/bayesn-filters/filters/*
        bayesn/bayesn-filters/filters/APO/SDSS/*
        bayesn/bayesn-filters/filters/ATLAS/ATLAS/*
        bayesn/bayesn-filters/filters/CAHA/O2K/*
        bayesn/bayesn-filters/filters/CFHT/Megacam/*
        bayesn/bayesn-filters/filters/CMO/2.5-m/*
        bayesn/bayesn-filters/filters/CTIO/*
        bayesn/bayesn-filters/filters/CTIO/0.9meter/*
        bayesn/bayesn-filters/filters/CTIO/2MASS/*
        bayesn/bayesn-filters/filters/CTIO/4meter/*
        bayesn/bayesn-filters/filters/CTIO/ANDICAM/*
        bayesn/bayesn-filters/filters/CTIO/DECAM/*
        bayesn/bayesn-filters/filters/CTIO/PROMPT/*
        bayesn/bayesn-filters/filters/DECam/*
        bayesn/bayesn-filters/filters/FLWO/1.2meter/*
        bayesn/bayesn-filters/filters/GALEX/Imaging/*
        bayesn/bayesn-filters/filters/GeminiNorth/NIRI/*
        bayesn/bayesn-filters/filters/HCT/TIRSPEC/*
        bayesn/bayesn-filters/filters/HST/WFC3/*
        bayesn/bayesn-filters/filters/HST/WFC3/IR/*
        bayesn/bayesn-filters/filters/HST/WFC3/UVIS2/*
        bayesn/bayesn-filters/filters/IRSF/SIRIUS/*
        bayesn/bayesn-filters/filters/IRTF/NSFCam/*
        bayesn/bayesn-filters/filters/KPNO/LaSilla/*
        bayesn/bayesn-filters/filters/LCO/*
        bayesn/bayesn-filters/filters/LCO/Baade/*
        bayesn/bayesn-filters/filters/LCO/Dupont/*
        bayesn/bayesn-filters/filters/LCO/PANIC/*
        bayesn/bayesn-filters/filters/LCO/Persson/*
        bayesn/bayesn-filters/filters/LCO/Swope/*
        bayesn/bayesn-filters/filters/Lick/KAIT/*
        bayesn/bayesn-filters/filters/Liverpool/*
        bayesn/bayesn-filters/filters/Liverpool/IOO/*
        bayesn/bayesn-filters/filters/Liverpool/RATCam/*
        bayesn/bayesn-filters/filters/LSST/*
        bayesn/bayesn-filters/filters/NOT/*
        bayesn/bayesn-filters/filters/NOT/ALFOSC/*
        bayesn/bayesn-filters/filters/NOT/MOSCA/*
        bayesn/bayesn-filters/filters/NOT/NOTCam/*
        bayesn/bayesn-filters/filters/NOT/TNG/*
        bayesn/bayesn-filters/filters/NULL/*
        bayesn/bayesn-filters/filters/OAM/TJO/*
        bayesn/bayesn-filters/filters/Palomar/*
        bayesn/bayesn-filters/filters/Palomar/P48/*
        bayesn/bayesn-filters/filters/Palomar/P48/CFH12K/*
        bayesn/bayesn-filters/filters/Palomar/P48/ZTF/*
        bayesn/bayesn-filters/filters/Palomar/P60/GRBCam/*
        bayesn/bayesn-filters/filters/Palomar/P60/SEDM/*
        bayesn/bayesn-filters/filters/Paranal/*
        bayesn/bayesn-filters/filters/Paranal/HAWKI/*
        bayesn/bayesn-filters/filters/Paranal/ISAAC/*
        bayesn/bayesn-filters/filters/Paranal/VISTA/*
        bayesn/bayesn-filters/filters/PS1/*
        bayesn/bayesn-filters/filters/Spitzer/IRAC/*
        bayesn/bayesn-filters/filters/SPM/RATIR/*
        bayesn/bayesn-filters/filters/standard/*
        bayesn/bayesn-filters/filters/standard/2MASS_PAIRITEL/*
        bayesn/bayesn-filters/filters/standard/Persson/*
        bayesn/bayesn-filters/filters/standard/stritzinger/*
        bayesn/bayesn-filters/filters/Swift/*
        bayesn/bayesn-filters/filters/Swift/UVOT/*
        bayesn/bayesn-filters/filters/UKIRT/WFCAM/*
        bayesn/bayesn-filters/filters/USNO/USNO40/*
        bayesn/bayesn-filters/standards/*
        bayesn/model_files/*
        bayesn/model_files/M20_model/*
        bayesn/model_files/T21_model/*
        bayesn/model_files/W22_model/*

[options.extras_require]
docs = # Required to build the docs.
    numpy
    sphinx
    sphinx_rtd_theme
    pillow
    numpydoc
