[metadata]
name = bayesn
version = 0.4.1
author = Matt Grayling, Stephen Thorp, Kaisey Mandel
author_email = mg2102@cam.ac.uk
description = Hierarchical Bayesian modelling of type Ia SNe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bayesn/bayesn

[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    matplotlib
    h5py
    sncosmo
    arviz
    astropy
    extinction
    dust_extinction
    jax
    numpyro
    scipy
    ruamel.yaml
    tqdm
scripts =
    run_bayesn
include_package_data = True

[options.package_data]
bayesn: bayesn/data/*
        bayesn/data/example_lcs/*
        bayesn/bayesn-filters/*
        bayesn/bayesn-filters/filters/*
        bayesn/bayesn-filters/filters/CTIO/*
        bayesn/bayesn-filters/filters/CTIO/ANDICAM/*
        bayesn/bayesn-filters/filters/DECam/*
        bayesn/bayesn-filters/filters/HST/WFC3/*
        bayesn/bayesn-filters/filters/HST/WFC3/IR/*
        bayesn/bayesn-filters/filters/HST/WFC3/UVIS2/*
        bayesn/bayesn-filters/filters/LCO/*
        bayesn/bayesn-filters/filters/LCO/Dupont/*
        bayesn/bayesn-filters/filters/LCO/Swope/*
        bayesn/bayesn-filters/filters/LSST/*
        bayesn/bayesn-filters/filters/NULL/*
        bayesn/bayesn-filters/filters/PS1/*
        bayesn/bayesn-filters/filters/standard/*
        bayesn/bayesn-filters/filters/standard/2MASS_PAIRITEL/*
        bayesn/bayesn-filters/filters/standard/Persson/*
        bayesn/bayesn-filters/filters/standard/stritzinger/*
        bayesn/bayesn-filters/filters/Swift/*
        bayesn/bayesn-filters/filters/Swift/UVOT/*
        bayesn/bayesn-filters/filters/USNO/*
        bayesn/bayesn-filters/filters/USNO/USNO40/*
        bayesn/bayesn-filters/filters/ZTF/*
        bayesn/bayesn-filters/filters/ATLAS/ATLAS/*
        bayesn/bayesn-filters/filters/UKIRT/WFCAM/*
        bayesn/bayesn-filters/standards/*
        bayesn/model_files/*
        bayesn/model_files/M20_model/*
        bayesn/model_files/T21_model/*
        bayesn/model_files/W22_model/*
        bayesn/redlaws/*
        bayesn/redlaws/C00/*
        bayesn/redlaws/C94/*
        bayesn/redlaws/CCM89/*
        bayesn/redlaws/D22/*
        bayesn/redlaws/F04/*
        bayesn/redlaws/F19/*
        bayesn/redlaws/F99/*
        bayesn/redlaws/F99_AVGLMC/*
        bayesn/redlaws/F99_LMC2/*
        bayesn/redlaws/F99_SNANA/*
        bayesn/redlaws/FM07/*
        bayesn/redlaws/G23/*
        bayesn/redlaws/GCC09/*
        bayesn/redlaws/O94/*
        bayesn/redlaws/VCG04/*

[options.extras_require]
docs = # Required to build the docs.
    numpy
    sphinx
    sphinx_rtd_theme
    pillow
    numpydoc
